--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    flex-direction: column; /* Makes everything stack vertically */
+    flex-direction: column; 
 }
 
 .container {
@@ -46,7 +46,7 @@ h1 {
 
 .form-container {
     display: flex;
-    flex-direction: column; /* Stack forms vertically */
+    flex-direction: column;
     align-items: center;
     width: 20%;
     gap: 20px;
